--- a/.github/workflows/mirror-bot.yml
+++ b/.github/workflows/mirror-bot.yml
@@ -42,17 +42,17 @@ jobs:
            ls
            cd source
            docker container prune --force
-           docker build . -t mirror-bot
+           docker build . -t tracker.py
        - name: running Docker
          timeout-minutes: 340
          continue-on-error: true
          run: |
-           docker run mirror-bot
+           python3 tracker.py
            
        - name: Loop workflow
          continue-on-error: true
          run: |
-              git clone https://github.com/$username/mirrorbot-workflow loop
+              git clone https://github.com/$username/realmeme_updater loop
               cd loop
               echo "1" >> loop.txt
               git add loop.txt
