Fixup Python Shits

--- a/.github/workflows/mirror-bot.yml
+++ b/.github/workflows/mirror-bot.yml
@@ -23,6 +23,7 @@ jobs:
            sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
            sudo -E apt-get clean 
            sudo apt install expect -y
+           sudo apt install bs4
            
        - name: cloning repo
          continue-on-error: true
