--- a/.github/workflows/mirror-bot.yml
+++ b/.github/workflows/mirror-bot.yml
@@ -25,9 +25,9 @@ jobs:
            sudo apt install expect -y
            apt-cache search beautifulsoup
            sudo apt-get install python3-bs4
-           pip3 install bs4
-           pip3 install setuptools
-           pip3 install PyYAML==5.1.2
+           sudo pip3 install bs4
+           sudo pip3 install setuptools
+           sudo pip3 install PyYAML==5.1.2
            
        - name: cloning repo
          continue-on-error: true
@@ -47,6 +47,7 @@ jobs:
          run: |
            ls
            cd source
+           sudo pip3 install -r requirements.txt
            docker container prune --force
            docker build . -t mirror-bot
            
