--- a/.github/workflows/mirror-bot.yml
+++ b/.github/workflows/mirror-bot.yml
@@ -23,6 +23,7 @@ jobs:
            sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
            sudo -E apt-get clean 
            sudo apt install expect -y
+           sudo -E pip3 install setuptools
            
        - name: cloning repo
          continue-on-error: true
@@ -42,12 +43,14 @@ jobs:
          run: |
            ls
            cd source
+           sudo pip3 install setuptools
            sudo pip3 install -r requirements.txt
            
        - name: running Docker
          timeout-minutes: 340
          continue-on-error: true
          run: |
+           cd source
            python3 tracker.py
            
        - name: Loop workflow
